# flowroute

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-18-browser-only-routing.md
scripts/: download-mihomo.sh  generate-icon.py
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  clash_api.rs  config.rs  dns_check.rs  lib.rs  main.rs  mihomo.rs  sysproxy.rs
