[package]
name = "flowroute"
version = "0.1.0"
description = "Simple proxy router with built-in rules"
authors = ["black"]
edition = "2021"

[lib]
name = "flowroute_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
